자 제발 마지막 쮸발

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ FMODStudioCache.asset
 StreamingAssets/Master Bank.bank.meta
 Prefabs/ABU/MonsterWaves.prefab.meta
 Prefabs/ABU/MonsterWaves.prefab
+Prefabs/ABU/MonsterWaves(big).prefab
+Prefabs/ABU/MonsterWaves(big).prefab.meta
